2014-03-21  Kirit Saelensminde  <kirit@felspar.com>
 Coercion from larger to smaller ints requires different implementations for signed and unsigned types. Silences a warning about a comparison always being true when an unsigned value is compared with zero.
 Fixed another gcc warning for later versions of Boost about unused typedefs.

2014-02-28  Kirit Saelensminde  <kirit@felspar.com>
 Allow dates to have days added and subtracted from them.
 Add `today` member to `fostlib::date`.

2014-02-27  Kirit Saelensminde  <kirit@felspar.com>
 Added a new `split` member to jcursor to allow one to be created by splitting up a single string.

2014-01-14  Kirit Saelensminde  <kirit@felspar.com>
 Fix some warnings for a couple of compilers.

2014-01-12  Kirit Saelensminde  <kirit@felspar.com>
 If clang is on the path for Linux then use that in preference to gcc
 Extend the `fostlib::timestamp` and `fostlib::date` interfaces somewhat. Added a number of missing coercions and constructors to make things simpler and made sure that there is no loss in precision when converting to and from strings and JSON. Moved a number of timestamp and date members inline for speed.

2013-08-20  Kirit Saelensminde  <kirit@felspar.com>
 Added `fostlib::log::flush()` which blocks until the previous logged messages have been processed.

2013-06-07  Kirit Saelensminde  <kirit@felspar.com>
 The environment variable VERSION can now be used to specify an embedded version number in the result of fost-lib derived targets, or other shared libraries that make use of the <version> property.

2013-05-03  Kirit Saelensminde  <kirit@felspar.com>
 Make sure that the `fostlib::worker` can't leak an exception when it's destructed.

2013-03-10  Kirit Saelensminde  <kirit@felspar.com>
 Added the ability to set the log message module when using the logging DSL through a new `.module()` member on the log message builder.
 `fostlib::absorbException` has been deprecated in favour of `fostlib::absorb_exception`.